--- a/app/src/main/res/layout/content_detail_doc_vinculado_adi.xml
+++ b/app/src/main/res/layout/content_detail_doc_vinculado_adi.xml
@@ -29,7 +29,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="50dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumerodocumentocarga"
         android:id="@+id/edtNumerodocumentocarga" />
@@ -48,7 +48,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumeroadicao"
         android:id="@+id/edtNumeroadicao" />
@@ -60,14 +60,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtNumeroadicao"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigotipodocumentovinculado"
         android:id="@+id/edtCodigotipodocumentovinculado" />
@@ -86,7 +86,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumerodocumentovinculado"
         android:id="@+id/edtNumerodocumentovinculado" />
