--- a/app/src/main/res/layout/content_detail_usuarios.xml
+++ b/app/src/main/res/layout/content_detail_usuarios.xml
@@ -29,7 +29,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="50dp"
         android:inputType="number"
         android:layout_below="@+id/lblUsu_codigo"
         android:id="@+id/edtUsu_codigo" />
@@ -48,7 +48,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblUsu_nome"
         android:id="@+id/edtUsu_nome" />
@@ -60,14 +60,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtUsu_nome"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblUsu_login"
         android:id="@+id/edtUsu_login" />
@@ -86,7 +86,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblUsu_senha"
         android:id="@+id/edtUsu_senha" />
@@ -98,14 +98,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtUsu_senha"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="93dp"
+        android:layout_marginTop="22dp"
         android:inputType="number"
         android:layout_below="@+id/lblUsu_adm"
         android:id="@+id/edtUsu_adm" />
