--- a/app/src/main/res/layout/content_detail_tarifas_adi.xml
+++ b/app/src/main/res/layout/content_detail_tarifas_adi.xml
@@ -29,7 +29,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="50dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumerodocumentocarga"
         android:id="@+id/edtNumerodocumentocarga" />
@@ -48,7 +48,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumeroadicao"
         android:id="@+id/edtNumeroadicao" />
@@ -60,14 +60,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtNumeroadicao"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigoassuntovinculado"
         android:id="@+id/edtCodigoassuntovinculado" />
@@ -86,7 +86,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblDataanoatovinculado"
         android:id="@+id/edtDataanoatovinculado" />
@@ -105,7 +105,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="93dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumeroatovinculado"
         android:id="@+id/edtNumeroatovinculado" />
@@ -124,7 +124,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumeroexatovinculado"
         android:id="@+id/edtNumeroexatovinculado" />
@@ -143,7 +143,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="137dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblSiglaorgaoatovinculado"
         android:id="@+id/edtSiglaorgaoatovinculado" />
@@ -162,7 +162,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="159dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblSiglatipoatovinculado"
         android:id="@+id/edtSiglatipoatovinculado" />
