--- a/app/src/main/res/layout/content_detail_tributo_adi.xml
+++ b/app/src/main/res/layout/content_detail_tributo_adi.xml
@@ -29,7 +29,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="50dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumerodocumentocarga"
         android:id="@+id/edtNumerodocumentocarga" />
@@ -48,7 +48,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNumeroadicao"
         android:id="@+id/edtNumeroadicao" />
@@ -60,14 +60,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtNumeroadicao"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigoreceitaimposto"
         android:id="@+id/edtCodigoreceitaimposto" />
@@ -79,14 +79,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtCodigoreceitaimposto"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="71dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigotipoaliquotaipt"
         android:id="@+id/edtCodigotipoaliquotaipt" />
@@ -98,14 +98,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtCodigotipoaliquotaipt"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="93dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigotipobeneficioipi"
         android:id="@+id/edtCodigotipobeneficioipi" />
@@ -117,14 +117,14 @@ android:layout_height="match_parent" >
         android:layout_below="@+id/edtCodigotipobeneficioipi"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <EditText
+    <AutoCompleteTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigotipodireito"
         android:id="@+id/edtCodigotipodireito" />
@@ -143,7 +143,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="137dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblCodigotiporecipiente"
         android:id="@+id/edtCodigotiporecipiente" />
@@ -162,7 +162,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="159dp"
+        android:layout_marginTop="22dp"
         android:inputType="text"
         android:layout_below="@+id/lblNomeunidadeespecificaaliquotaipt"
         android:id="@+id/edtNomeunidadeespecificaaliquotaipt" />
@@ -181,7 +181,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="181dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblNumeronotacomplementartipi"
         android:id="@+id/edtNumeronotacomplementartipi" />
@@ -200,7 +200,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="203dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblPercentualaliquotaacordotarifario"
         android:id="@+id/edtPercentualaliquotaacordotarifario" />
@@ -219,7 +219,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="225dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblPercentualaliquotanormaladval"
         android:id="@+id/edtPercentualaliquotanormaladval" />
@@ -238,7 +238,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="247dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblPercentualaliquotareduzida"
         android:id="@+id/edtPercentualaliquotareduzida" />
@@ -257,7 +257,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="269dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblPercentualreducaoipt"
         android:id="@+id/edtPercentualreducaoipt" />
@@ -276,7 +276,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="291dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblQuantidademlrecipiente"
         android:id="@+id/edtQuantidademlrecipiente" />
@@ -295,7 +295,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="313dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblQuantidademercadoriaunidadealiquotaespecifica"
         android:id="@+id/edtQuantidademercadoriaunidadealiquotaespecifica" />
@@ -314,7 +314,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="335dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValoraliquotaespecificaipt"
         android:id="@+id/edtValoraliquotaespecificaipt" />
@@ -333,7 +333,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="357dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValorbasecalculoadval"
         android:id="@+id/edtValorbasecalculoadval" />
@@ -352,7 +352,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="379dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValorcalculadoiiactarifario"
         android:id="@+id/edtValorcalculadoiiactarifario" />
@@ -371,7 +371,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="401dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValorcalculoiptespecifica"
         android:id="@+id/edtValorcalculoiptespecifica" />
@@ -390,7 +390,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="423dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValorcalculoiptadval"
         android:id="@+id/edtValorcalculoiptadval" />
@@ -409,7 +409,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="445dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValoriptarecolher"
         android:id="@+id/edtValoriptarecolher" />
@@ -428,7 +428,7 @@ android:layout_height="match_parent" >
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="467dp"
+        android:layout_marginTop="22dp"
         android:inputType="numberDecimal"
         android:layout_below="@+id/lblValorimpostodevido"
         android:id="@+id/edtValorimpostodevido" />
